--- a/tx_ultimate_cover.yaml
+++ b/tx_ultimate_cover.yaml
@@ -599,7 +599,7 @@ tx_ultimate_touch:
     - lambda: >
         ESP_LOGD("tx_ultimate_touch.on_swipe_right", "Swipe Right Position: %d / State: %d", touch.x, touch.state);
 
-  on_full_touch_release:
+  on_multi_touch_release:
     - script.execute: led_on_full_touch
 
     - switch.turn_on: vibra
@@ -609,7 +609,7 @@ tx_ultimate_touch:
         state: ON
 
     - lambda: >
-        ESP_LOGD("tx_ultimate_touch.on_full_touch_release", "Full Touch Release Position: %d / State: %d", touch.x, touch.state);
+        ESP_LOGD("tx_ultimate_touch.on_multi_touch_release", "Multi Touch Release Position: %d / State: %d", touch.x, touch.state);
 
   on_long_touch:
     - script.execute: led_on_long_touch
