--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -950,7 +950,7 @@ script:
               id(double_tap_4).publish_state(true);
               break;
           }
-          id(handle_on_release).execute();
+          id(handle_on_release).execute(touch.x, touch.state);
 
   - id: short_vibration
     then:
